# hello-django

./: README.md
custom_user/: README.md  pyproject.toml
custom_user/custom_user/: settings.py
custom_user/users/: admin.py  models.py
custom_user/users/migrations/: 0001_initial.py
