[tool.poetry]
name = "custom_user"
version = "0.1.0"
description = "Django project with custom User Model"
authors = ["dr3tt <24375656+dr3tt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
